<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connect"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_connect" />
        <item
            android:id="@+id/nav_subscribe"
            android:icon="@android:drawable/ic_menu_view"
            android:title="@string/menu_subscribe"
            android:visible="false" />
        <item
            android:id="@+id/nav_publish"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/menu_publish"
            android:visible="false" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_chat" />

    </group>
</menu>